--- a/noteolinev2/src/main/resources/templates/index.html
+++ b/noteolinev2/src/main/resources/templates/index.html
@@ -9,8 +9,10 @@ index
 <form action="/logout" method="post">
 <input type="submit" value="logout"></form>
 <form action="/in/a" method="get">
-    <input type="submit" value="查询"></form>
+    <input type="submit" value="查询/in/a"></form>
 <form action="/in/sa?title=123&&info=123///&&cid=1&&name=sun" method="get">
     <input type="submit" value="添加"></form>
+<form action="/s/a" method="get">
+    <input type="submit" value="查询/s/a"></form>
 </body>
 </html>
